# roq-fix-proxy

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
conda/: meta.yaml  run_test.sh
scripts/: create_conda_env.sh
src/roq/: CMakeLists.txt
src/roq/fix_proxy/: CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  error.cpp  error.hpp  main.cpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh  test_fix.py
src/roq/fix_proxy/client/: CMakeLists.txt  factory.hpp  manager.cpp  manager.hpp  session.hpp
src/roq/fix_proxy/client/fix/: CMakeLists.txt  listener.cpp  listener.hpp  session.cpp  session.hpp
src/roq/fix_proxy/client/json/: CMakeLists.txt  business_message_reject.hpp  execution_report.hpp  listener.cpp  listener.hpp  response.cpp  response.hpp  session.cpp  session.hpp
src/roq/fix_proxy/config/: test.toml
src/roq/fix_proxy/fix/: CMakeLists.txt  session.cpp  session.hpp
src/roq/fix_proxy/flags/: .gitignore  CMakeLists.txt  client.json  flags.json  server.json
src/roq/fix_proxy/rest/: CMakeLists.txt  business_message_reject.hpp  execution_report.hpp  response.cpp  response.hpp  session.cpp  session.hpp
src/roq/fix_proxy/server/: CMakeLists.txt  manager.cpp  manager.hpp  session.cpp  session.hpp
src/roq/proxy/fix/: CMakeLists.txt  TODO  application.cpp  application.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  error.cpp  error.hpp  index.rst  main.cpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh  test_fix.py
src/roq/proxy/fix/auth/: CMakeLists.txt  session.cpp  session.hpp
src/roq/proxy/fix/benchmark/: CMakeLists.txt
src/roq/proxy/fix/client/: CMakeLists.txt  factory.hpp  listener.cpp  listener.hpp  manager.cpp  manager.hpp  session.cpp  session.hpp
src/roq/proxy/fix/client/fix/: CMakeLists.txt  listener.cpp  listener.hpp  session.cpp  session.hpp
src/roq/proxy/fix/client/json/: CMakeLists.txt  business_message_reject.hpp  execution_report.hpp  listener.cpp  listener.hpp  response.cpp  response.hpp  session.cpp  session.hpp
src/roq/proxy/fix/flags/: .gitignore  CMakeLists.txt  auth.json  client.json  flags.json  server.json  test.json
src/roq/proxy/fix/server/: CMakeLists.txt  manager.cpp  manager.hpp  session.cpp  session.hpp
src/roq/proxy/fix/test/: CMakeLists.txt  crypto.cpp  fix_new_order_single.cpp
src/roq/proxy/fix/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp
src/simple/: CMakeLists.txt  README.md  application.cpp  application.hpp  config.cpp  config.hpp  config.toml  controller.cpp  controller.hpp  session.cpp  session.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh  test_ws.py
src/simple/config/: test.toml
src/simple/fix/: CMakeLists.txt  session.cpp  session.hpp
src/simple/flags/: .gitignore  CMakeLists.txt  fix.json  flags.cpp  flags.hpp  flags.json  rest.json
src/simple/json/: CMakeLists.txt  response.cpp  response.hpp  session.cpp  session.hpp
src/simple/rest/: CMakeLists.txt  response.cpp  response.hpp  session.cpp  session.hpp
src/simple/web/: CMakeLists.txt  session.cpp  session.hpp
test/: CMakeLists.txt  fix_new_order_single.cpp
